[project]
name = "gmmoments"
version = "0.0.1"
authors = [
  { name="Ruairidh South", email="rsouth@princeton.edu" },
]
description = "Estimate parameters using generalized method of moments."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "jax[cpu]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["gmmoments"]
